[workspace]
members = [
  "laps_macros",
]

[package]
name = "laps"
version = "0.0.2"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2021"
description = "Lexer and parser collections."
repository = "https://github.com/MaxXSoft/laps"
documentation = "https://docs.rs/laps"
categories = ["parsing"]
keywords = ["parser", "lexer", "ast"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["macros"]

[features]
default = ["logger"]
# Enable the front-end logger instead of returning error messages as strings.
logger = ["dep:colored"]
# Enable additional macros, such as derive macros, etc.
macros = ["dep:laps_macros"]

[dependencies]
colored = { version = "2.0.0", optional = true }
unicode-xid = "0.2.4"
laps_macros = { path = "./laps_macros", version = "0.0.2", optional = true }
unicode-width = "0.1.10"

[dev-dependencies]
regex-syntax = "0.7.2"

[[example]]
name = "sexp"
required-features = ["macros"]

[[example]]
name = "calc"
required-features = ["macros"]

[[example]]
name = "json"
required-features = ["macros"]

[[example]]
name = "clike"
required-features = ["macros"]

[[example]]
name = "re"
required-features = ["macros"]
