[workspace]
members = [
  "laps_macros",
  "laps_regex",
]

[package]
name = "laps"
version = "0.1.3"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2021"
description = "Lexer and parser collections."
repository = "https://github.com/MaxXSoft/laps"
documentation = "https://docs.rs/laps"
categories = ["parsing", "text-processing"]
keywords = ["parser", "lexer", "ast"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["logger"]
# Enable the front-end logger instead of returning error messages as strings.
logger = ["dep:colored"]
# Enable additional macros, such as derive macros, etc.
macros = ["dep:laps_macros"]

[dependencies]
colored = { version = "2.1.0", optional = true }
laps_macros = { path = "./laps_macros", version = "0.1.2", optional = true }
unicode-width = "0.1.10"

[dev-dependencies]
criterion = "0.5.1"

[profile]
release = { lto = true }
bench = { lto = true }

[[example]]
name = "sexp"
required-features = ["macros"]

[[example]]
name = "calc"
required-features = ["macros"]

[[example]]
name = "json"
required-features = ["macros"]

[[example]]
name = "clike"
required-features = ["macros"]

[[bench]]
name = "c_lexer"
harness = false
required-features = ["macros"]
