[package]
name = "laps_macros"
version = "0.0.1"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2021"
description = "Macros for crate `laps`."
categories = ["parsing", "development-tools::procedural-macro-helpers"]
keywords = ["laps", "parser", "lexer", "ast", "derive", "proc_macro"]
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.102", features = ["full"] }
